[package]
name = "escrow-server"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"                 # Web framework
actix-web = "4.0"
tokio = { version = "1", features = ["full"] } # Async runtime
serde = { version = "1", features = ["derive"] } # JSON serialization
serde_json = "1"
solana-sdk = "1.18.8"        # Solana SDK for transactions
solana-client = "1.18.8"     # Solana client for RPC calls
anchor-lang = "0.30.1"       # Anchor framework
anyhow = "1.0"              # Error handling
escrow-project = { path = "/home/masood123/escrow-project/programs/escrow-project" }
